<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">
    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="1"
            >
            <EditText
                android:id="@+id/edit_film"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:hint="@string/masukkan_nama_film"
                android:layout_weight="0.8"/>
            <Button
                android:id="@+id/btn_film"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cari"
                android:textColor="@color/button"
                android:theme="@style/ButtonStyle"
                android:layout_weight="0.2"
                />
        </LinearLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listView"/>
    </LinearLayout>
</RelativeLayout>