<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

            <android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.design.widget.CollapsingToolbarLayout
                    android:id="@+id/collapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:contentScrim="?attr/colorPrimary"
                    app:expandedTitleTextAppearance="@android:color/transparent"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_gravity="bottom"
                        android:fitsSystemWindows="true"
                        android:scaleType="fitXY"
                        app:layout_collapseMode="parallax"
                        app:layout_collapseParallaxMultiplier="0.7" />

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@android:color/transparent"
                        app:layout_collapseMode="pin"
                        app:popupTheme="@style/AppTheme.PopupOverlay" />

                </android.support.design.widget.CollapsingToolbarLayout>

            </android.support.design.widget.AppBarLayout>


            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/img_item_photo"
                    android:layout_width="122dp"
                    android:layout_height="211dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true" />

                <LinearLayout
                    android:id="@+id/ltitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_toRightOf="@id/img_item_photo"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="139dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:layout_toRightOf="@id/img_item_photo"
                        android:text="@string/nama_title"
                        android:textColor="@color/vote"
                        android:textSize="25sp"
                        android:textStyle="bold" />


                    <ImageView
                        android:id="@+id/iv_fav"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_toRightOf="@id/tv_title"
                        android:background="@drawable/ic_favorite_border_black_24dp"
                        android:theme="@style/ButtonStyle" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lpopuler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ltitle"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_toRightOf="@id/img_item_photo"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_populer"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:background="@drawable/ic_people_black_24dp" />

                    <TextView
                        android:id="@+id/tv_popularity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_toRightOf="@id/img_item_photo"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:minLines="1"
                        android:textSize="16sp"
                        tools:text="populer" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lvote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lpopuler"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_toRightOf="@id/img_item_photo"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_vote"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:background="@drawable/ic_local_offer_black_24dp" />

                    <TextView
                        android:id="@+id/tv_vote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_toRightOf="@id/img_item_photo"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:minLines="1"
                        android:textSize="16sp"
                        tools:text="vote" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ldate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lvote"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_toRightOf="@id/img_item_photo"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_date"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="11dp"
                        android:background="@drawable/ic_date_range_black_24dp" />


                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@id/img_item_photo"
                        android:textSize="16sp"
                        tools:text="date" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ldate"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_toRightOf="@id/img_item_photo"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_favorit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/favorit"
                        android:textColor="@color/button"
                        android:theme="@style/ButtonStyle" />

                </LinearLayout>
            </RelativeLayout>


        <LinearLayout
            android:id="@+id/lover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lvote"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@id/img_item_photo"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_over"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="19dp"
                android:background="@drawable/ic_movie_black_24dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/Overview"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="italic"
                tools:text="@string/overview"/>

        </LinearLayout>
    </ScrollView>
            </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>